; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_loadlib.c_ll_seeall.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_loadlib.c_ll_seeall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TTABLE = common dso_local global i32 0, align 4
@LUA_GLOBALSINDEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"__index\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ll_seeall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ll_seeall(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @LUA_TTABLE, align 4
  %5 = call i32 @luaL_checktype(i32* %3, i32 1, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @lua_getmetatable(i32* %6, i32 1)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %16, label %9

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_createtable(i32* %10, i32 0, i32 1)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @lua_pushvalue(i32* %12, i32 -1)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @lua_setmetatable(i32* %14, i32 1)
  br label %16

16:                                               ; preds = %9, %1
  %17 = load i32*, i32** %2, align 8
  %18 = load i32, i32* @LUA_GLOBALSINDEX, align 4
  %19 = call i32 @lua_pushvalue(i32* %17, i32 %18)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_setfield(i32* %20, i32 -2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_getmetatable(i32*, i32) #1

declare dso_local i32 @lua_createtable(i32*, i32, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_setmetatable(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
